objects/dbu_ContactUs__c.object
<CustomObject>
    <fields>
        <fullName>dbu_Address__c</fullName>
        <label>dbu_Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Cummins_Product_Support__c</fullName>
        <label>Which type of Cummins product can we sup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engine Part</fullName>
                </value>
                <value>
                    <fullName>Generator Part</fullName>
                </value>
                <value>
                    <fullName>Other Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_ESN__c</fullName>
        <label>dbu_ESN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Email__c</fullName>
        <label>dbu Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>dbu_First_Name__c</fullName>
        <label>dbu First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_GSN__c</fullName>
        <label>dbu_GSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Last_Name__c</fullName>
        <label>dbu Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Message__c</fullName>
        <label>dbu_Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_Order_Confirmation_Number__c</fullName>
        <label>dbu_Order Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Phone__c</fullName>
        <label>dbu Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>dbu_Product_Support__c</fullName>
        <label>dbu_Product Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_State__c</fullName>
        <label>dbu_State</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Subscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_Subscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Tell_Us__c</fullName>
        <label>dbu_Tell Us</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_What_Can_we_help_with_us__c</fullName>
        <label>dbu_What Can we help with us</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I am looking for technical Product Information</fullName>
                </value>
                <value>
                    <fullName>I am looking technical website support</fullName>
                </value>
                <value>
                    <fullName>I am looking for information about placing an online order</fullName>
                </value>
                <value>
                    <fullName>I am looking for help tracking my order</fullName>
                </value>
                <value>
                    <fullName>I am looking for information on product warranty</fullName>
                </value>
                <value>
                    <fullName>I have other online store inquiries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_Zipcode__c</fullName>
        <label>dbu_Zipcode</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_isContected__c</fullName>
        <label>dbu isContected</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_recordType__c</fullName>
        <label>dbu_Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_subscribeEmailId__c</fullName>
        <label>dbu_subscribeEmailId</label>
        <type>Email</type>
    </fields>
    <label>dbu ContactUs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>dbu_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>dbu_subscribeEmailId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>dbu ContactUs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dbu ContactUs</pluralLabel>
    <recordTypes>
        <fullName>dbu_ContactusRT</fullName>
        <active>true</active>
        <label>dbu_ContactusRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>dbu_SuscribeRT</fullName>
        <active>true</active>
        <label>dbu_SuscribeRT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>